--- a/client/src/pages/login/login.css
+++ b/client/src/pages/login/login.css
@@ -53,7 +53,7 @@
   outline: none;
 }
 
-.loginButton{
+.loginButton {
   border: none;
   outline: none;
   height: 50px;
@@ -65,13 +65,17 @@
   cursor: pointer;
 }
 
-.loginForgot{
+.loginButton:disabled {
+  cursor: not-allowed;
+}
+
+.loginForgot {
   text-align: center;
   color: #1775ee;
   cursor: pointer;
 }
 
-.loginButtonRegister{
+.loginButtonRegister {
   background-color: #42b72a;
   width: 60%;
   align-self: center;
