--- a/client/src/components/rightbar/rightbar.css
+++ b/client/src/components/rightbar/rightbar.css
@@ -60,18 +60,18 @@
   color: #555;
 }
 
-.rigthbarInfoValue{
+.rigthbarInfoValue {
   font-weight: 300;
   border-bottom: 1px solid #000;
 }
 
-.rightbarFollowings{
+.rightbarFollowings {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
 }
 
-.rightbarFollowing{
+.rightbarFollowing {
   display: flex;
   flex-direction: column;
   margin-bottom: 20px;
@@ -83,4 +83,20 @@
   height: 100px;
   object-fit: cover;
   border-radius: 50%;
+}
+
+.buttonrightbarFollowButton {
+  margin-top: 30px;
+  margin-bottom: 10px;
+  border: none;
+  background: #1872f2;
+  color: white;
+  border-radius: 5px;
+  padding: 5px 10px;
+  display: flex;
+  align-items: center;
+  font-size: 16px;
+  font-weight: 500;
+  cursor: pointer;
+  outline: none;
 }
