--- a/client/src/pages/messenger/messenger.css
+++ b/client/src/pages/messenger/messenger.css
@@ -7,7 +7,7 @@
   flex: 3.5;
 }
 
-.chatMenuInput{
+.chatMenuInput {
   width: 90%;
   padding: 10px 0;
   border: none;
@@ -18,32 +18,33 @@
   flex: 5.5;
 }
 
-.chatBoxWrapper{
+.chatBoxWrapper {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  position: relative;
 }
 
-.chatBoxTop{
+.chatBoxTop {
   height: 100%;
   overflow-y: scroll;
   padding-right: 10px;
 }
 
-.chatBoxBottom{
+.chatBoxBottom {
   margin-top: 5px;
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
-.chatMessageInput{
+.chatMessageInput {
   width: 80%;
   height: 90px;
-  padding: 10px
+  padding: 10px;
 }
 
-.chatSubmitButton{
+.chatSubmitButton {
   width: 70px;
   height: 40px;
   border: none;
@@ -63,4 +64,13 @@
 .chatOnlineWrapper {
   padding: 10px;
   height: 100%;
+}
+
+.noConversationText {
+  position: absolute;
+  top: 10%;
+  text-align: center;
+  font-size: 50px;
+  color: rgb(224, 220, 220);
+  cursor: default;
 }
